examples/ingress-controllers/alb-ingress/apps/hello-world-2/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-2
  labels:
    lp-service-id: hello-world-2
spec:
  selector:
    matchLabels:
      lp-service-id: hello-world-2
  template:
    metadata:
      labels:
        lp-service-id: hello-world-2
    spec:
      containers:
      - name: hello-world-2
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
      volumes:
      - configMap:
          name: hello-world-2
        name: hello-world-2-config-volume
