examples/ingress-controllers/alb-ingress/apps/hello-world-2/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-2
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hello-world-1.lonelyplanet-digital.sandbox.redventures.io
  labels:
    lp-service-id: hello-world-2
spec:
  ports:
  - name: http
    port: 80
    targetPort: 4000
  selector:
    lp-service-id: hello-world-2
  type: NodePort
